add LabelController + Swagger